--- a/public/contacto/index.html
+++ b/public/contacto/index.html
@@ -17,8 +17,8 @@
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="http://jorgesolajais.com.ar/">Inicio</a>
-            <a class="navbar-item" href="http://jorgesolajais.com.ar/">Proyectos</a>
-            <a class="navbar-item" href="http://jorgesolajais.com.ar/">Contacto</a>
+            <a class="navbar-item" href="http://jorgesolajais.com.ar//proyectos">Proyectos</a>
+            <a class="navbar-item" href="http://jorgesolajais.com.ar//contacto">Contacto</a>
         </div>
     </nav>
     
@@ -43,7 +43,20 @@
     <div class="column is-9">
         <div class="tile is-child box">
             <div class="content">
-                
+                <p><strong>Domicilio postal:</strong></p>
+<pre><code>                Ayacucho esq. República
+                1° piso Of. Belén
+                (4700) - San F. del V. de Catamarca
+</code></pre>
+<p><strong>Teléfono fijo:</strong></p>
+<pre><code>                +54 0383 4455600 interno 326
+</code></pre>
+<p><strong>Celular:</strong></p>
+<pre><code>                +5493834041591
+</code></pre>
+<p><strong>E-mail:</strong></p>
+<pre><code>                -</code></pre>
+
             </div>
         </div>
     </div>
@@ -126,10 +139,10 @@
 <footer class="footer has-background-grey-darker has-text-white">
     <div class="content has-text-centered">
         <p>
-            <span class="icon is-large"><a href="https://twitter.com/" class="mysocial" rel="me"><i class="fab fa-twitter fa-3x"></i></a></span>&nbsp;&nbsp;
+            <span class="icon is-large"><a href="https://twitter.com/jorgesolajais" class="mysocial" rel="me"><i class="fab fa-twitter fa-3x"></i></a></span>&nbsp;&nbsp;
             <span class="icon is-large"><a href="https://www.youtube.com/" class="mysocial" rel="me"><i class="fab fa-youtube fa-3x"></i></a></span>&nbsp;&nbsp;
             <span class="icon is-large"><a href="https://instagram.com/" class="mysocial" rel="me"><i class="fab fa-instagram fa-3x"></i></a></span>&nbsp;&nbsp;
-            <span class="icon is-large"><a href="https://facebook.com/" class="mysocial" rel="me"><i class="fab fa-facebook fa-3x"></i></a></span>&nbsp;&nbsp;
+            <span class="icon is-large"><a href="https://facebook.com/jorgesolajais" class="mysocial" rel="me"><i class="fab fa-facebook fa-3x"></i></a></span>&nbsp;&nbsp;
             <br><br>
             Copyright &copy; Jorge Solá Jais 2020 
             <br>Power by Graficon &copy;
