Agrega email e nros internos en contacto

--- a/public/contacto/index.html
+++ b/public/contacto/index.html
@@ -49,13 +49,14 @@
                 (4700) - San F. del V. de Catamarca
 </code></pre>
 <p><strong>Teléfono fijo:</strong></p>
-<pre><code>                +54 0383 4455600 interno 326
+<pre><code>                +54 0383 4455600 internos 219-611
 </code></pre>
 <p><strong>Celular:</strong></p>
 <pre><code>                +5493834041591
 </code></pre>
 <p><strong>E-mail:</strong></p>
-<pre><code>                -</code></pre>
+<pre><code>                jsolajais@senadodecatamarca.gob.ar
+</code></pre>
 
             </div>
         </div>
