Link internos de Proyecto reparados

--- a/public/proyectos/index.html
+++ b/public/proyectos/index.html
@@ -44,9 +44,8 @@
         <div class="tile is-child box">
             <div class="content">
                 <p><strong>Extractos de Proyectos presentados</strong></p>
-<p>Años: <a href="#veinte">2020</a> - <a href="#nueve">2019</a> - <a href="#ocho">2018</a> - <a href="#siete">2017</a> - <a href="#seis">2016</a></p>
+<p>Años: <a href="#a%C3%B1o-2020">2020</a> - <a href="#a%C3%B1o-2019">2019</a> - <a href="#a%C3%B1o-2018">2018</a> - <a href="#a%C3%B1o-2017">2017</a> - <a href="#a%C3%B1o-2016">2016</a></p>
 <hr>
-<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
 <h5 id="año-2020">Año 2020</h5>
 <p><strong>Expte.:</strong> <em>S/000108/2020</em><br>
 SOLICTAR AL P.E.P LO PETICIONADO MEDIANTE RESOLUCIONES PARLAMENTARIAS C.S. N° 076/19 &ldquo;CUBRIR CON EL SERVICIO DE AGENTES SANITARIOS A LOS PARAJES DE LAS VILLAS, EL TOLAR Y AMPUNJACO EN EL DELPARTAMENTO BELEN.-</p>
@@ -55,7 +54,6 @@ S/ LA CREACION DE LA CAMARA DE APELACIONES EN LO CIVIL, COMERCIAL, MINAS, FAMILI
 <p><strong>Expte.:</strong> <em>S/000050/2020</em><br>
 S/ DECLARAR DE INTERES PARLAMENTARIO E HISTORICO EL CENTESIMO QUINCUAGESIMO ANIVERSARIO DE LA INSTITUCION DEL DIA DE LA INGENIERIA ARGENTINA.-</p>
 <hr>
-<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
 <h5 id="año-2019">Año 2019</h5>
 <p><strong>Expte.:</strong> <em>S/000302/2019</em><br>
 EXPRESAR EL MÁS ENÉRGICO REPUDIO AL GOLPE CÍVICO-POLICIAL PERPETRADO EN EL ESTADO PLURINACIONAL DE BOLIVIA, EL DÍA 10 DE NOVIEMBRE DEL CORRIENTE AÑO.</p>
@@ -128,7 +126,6 @@ DECLARAR DE INTERES PARLAMENTARIO LA APERTURA AL TRANSITO DE LA OBRA DE PAVIMENT
 <p><strong>Expte.:</strong> <em>S/000011/2019</em><br>
 EXPRESAR EL MAS ENERGICO REPUDIO A LA ACCION DE APELACION INTERPUESTA POR LA ADMINISTRACION FEDERAL DE INGRESOS PUBLICOS (AFIP) DEPENDIENTE DEL GOBIERNO NACIONAL, SOBRE LA MEDIDA ORDENADA POR EL JUZGADO COMERCIAL N° 5, QUE DETERMINABA LA APERTURA DE UNA CUENTA BANCARIA INEMBARGABLE PARA EL PAGO DE HABERES DE LOS TRABAJADORES PERIODISTAS DEL CANAL DE NOTICIAS C5N, MINUTO UNO, RADIO 10, FM VALE, FM POP Y FM MEGA ENTRE OTROS.</p>
 <hr>
-<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
 <h5 id="año-2018">Año 2018</h5>
 <p><strong>Expte.:</strong> <em>S/000354/2018</em><br>
 SOLICITA DECLARAR DE INTERES PARLAMENTARIO, CULTURAL Y SOCIAL EL 30° ANIVERSARIO DEL PROGRAMA RADIAL &ldquo;CANTARES DE ALPAMIKUMA&rdquo; A CELEBRARSE EL 17 DE DICIEMBRE DE 2018.-</p>
@@ -195,7 +192,6 @@ E/PROYECTO DE LEY SOBRE : PROPICIANDO DECLARAR PATRIMONIO CULTURAL DE LA PROVINC
 <p><strong>Expte.:</strong> <em>S/000005/2018</em><br>
 E/ PROYECTO DE DECLARACION SOBRE: DECLARAR DE INTERES LEGISLATIVO LA REALIZACION DE LA &ldquo;14° EDICION DEL FESTIVAL DEL CHIMBOTE CALCHAQUI&rdquo;.-</p>
 <hr>
-<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
 <h5 id="año-2017">Año 2017</h5>
 <p><strong>Expte.:</strong> <em>S/000206/2017</em><br>
 E/PROYECTO DE LEY SOBRE : &ldquo;MODIFICACION DEL ART. 8 Y DEROGACION DEL ART. 13 DE LA LEY N° 5173- REGISTRO DE LA PROPIEDAD INMOBILIARIA Y DE MANDATOS, REESTRUCTURACION Y MEJORAMIENTO DE LOS SERVICIOS QUE PRESTA&rdquo;..-</p>
@@ -212,7 +208,6 @@ E/PROYECTO DE RESOLUCION, SOLICITANDO AL P.E.P. IMPONGA EL NOMBRE DE &ldquo;PRES
 <p><strong>Expte.:</strong> <em>S/000012/2017</em><br>
 E/ PROYECTO DE DECLARACION; SOLICITANDO DECLARAR DE INTERES LEGISLATIVO EL &ldquo;CENTENARIO DE LA ESCUELA N° 358 DE LA LOCALIDAD DE LAS BARRANCAS, DPTO. BELEN&rdquo;.-</p>
 <hr>
-<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
 <h5 id="año-2016">Año 2016</h5>
 <p><strong>Expte.:</strong> <em>S/000251/2016</em><br>
 E/PROYECTO DE RESOLUCION, SOLICITANDO AL P.E.P. CONSTRUCCION DE UN POZO DE AGUA EN LA LOCALIDAD DE LONDRES, DPTO. BELEN.-</p>
