--- a/public/index.html
+++ b/public/index.html
@@ -52,12 +52,12 @@
                     <article class="media">
                         <div class="media-content">
                             <div class="content">
-                                <p class="title is-4"><a href="http://jorgesolajais.com.ar/2020/18102020/">EXELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE</a></p>
+                                <p class="title is-4"><a href="http://jorgesolajais.com.ar/2020/18102020/">EXCELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE</a></p>
                                 <p class="subtitle is-size-6 has-text-grey-light">
                                     Publicado el 16/10/2020 &middot;
                                     <i class="far fa-clock"></i>&nbsp;1 min lectura
                                 </p>
-                                <p>EXELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE
+                                <p>EXCELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE
 Orgulloso de ser parte de YMAD y celebrar su 62º aniversario con un convenio junto a EC Sapem, por el cual proveeremos de más energía a los ciudadanos del norte de Belén a partir del nuevo tendido eléctrico entre Alumbrera y Farallón Negro. Seguimos trabajando junto al Gobierno de la Provincia....</p>
                             </div>
                         </div>
@@ -272,7 +272,7 @@ Ver video...</p>
     <div class="card-content">
         <h1 class="title is-5">Posts Recientes</h1>
         
-            <h1><a href="http://jorgesolajais.com.ar/2020/18102020/">EXELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE</a></h1>
+            <h1><a href="http://jorgesolajais.com.ar/2020/18102020/">EXCELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE</a></h1>
             <time class="has-text-grey-light is-size-7">16 October 2020</time>
         
             <h1><a href="http://jorgesolajais.com.ar/2020/17102020/">62 AÑOS DE YMAD</a></h1>
